{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 219,
  "lineage": "8a507c09-8d74-b0e4-f640-3978fcbaa144",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "team2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3ca8f95e1c486fb",
            "association_id": "eipassoc-0469c3e9957406c85",
            "domain": "vpc",
            "id": "eipalloc-0c3ca8f95e1c486fb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04796bf7b880f325a",
            "private_dns": "ip-10-0-1-52.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.52",
            "public_dns": "ec2-54-180-193-12.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.193.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "team2_ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04341a215040f91bb",
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:instance/i-085e214f75c87b145",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085e214f75c87b145",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "team2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097c3b61c7d1f89d6",
            "private_dns": "ip-10-0-1-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-52-79-95-54.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.95.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e4698a79009c39b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7dae80e01d16c7a",
            "tags": {
              "Name": "team2-ec2-bastion"
            },
            "tags_all": {
              "Name": "team2-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f959d84ca5b02e8"
            ]
          },
          "dependencies": [
            "aws_security_group.team2_sg",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:internet-gateway/igw-0e4b5dc8333ae1619",
            "id": "igw-0e4b5dc8333ae1619",
            "owner_id": "133713477530",
            "tags": {
              "Name": "team2-igw"
            },
            "tags_all": {
              "Name": "team2-igw"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "team2_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3ca8f95e1c486fb",
            "association_id": "eipassoc-0469c3e9957406c85",
            "connectivity_type": "public",
            "id": "nat-03a485c29dc9d726c",
            "network_interface_id": "eni-04796bf7b880f325a",
            "private_ip": "10.0.1.52",
            "public_ip": "54.180.193.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7dae80e01d16c7a",
            "tags": {
              "Name": "team2-ngw"
            },
            "tags_all": {
              "Name": "team2-ngw"
            }
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team2_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:route-table/rtb-02cccc1c7778fb333",
            "id": "rtb-02cccc1c7778fb333",
            "owner_id": "133713477530",
            "propagating_vgws": [
              "vgw-0846fc76ff226c747"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03a485c29dc9d726c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team2-route-private"
            },
            "tags_all": {
              "Name": "team2-route-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.team2_ngw",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team2_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:route-table/rtb-0a0045eb76b64e68a",
            "id": "rtb-0a0045eb76b64e68a",
            "owner_id": "133713477530",
            "propagating_vgws": [
              "vgw-0846fc76ff226c747"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4b5dc8333ae1619",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team2-route-public"
            },
            "tags_all": {
              "Name": "team2-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team2_igw",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9aa0765eef8eeb0",
            "route_table_id": "rtb-02cccc1c7778fb333",
            "subnet_id": "subnet-05e9fc9474fe781a2"
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_ngw",
            "aws_route_table.team2_route_private",
            "aws_subnet.team2_dba_a",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3036dde9b87872d",
            "route_table_id": "rtb-02cccc1c7778fb333",
            "subnet_id": "subnet-060ee2a5115a3c646"
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_ngw",
            "aws_route_table.team2_route_private",
            "aws_subnet.team2_dba_c",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06891075a1d43012f",
            "route_table_id": "rtb-02cccc1c7778fb333",
            "subnet_id": "subnet-04eccaa3fe26a71d8"
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_ngw",
            "aws_route_table.team2_route_private",
            "aws_subnet.team2_private_a",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d36e6aa515195eba",
            "route_table_id": "rtb-02cccc1c7778fb333",
            "subnet_id": "subnet-015699598cf3ba204"
          },
          "dependencies": [
            "aws_eip.team2_eip",
            "aws_nat_gateway.team2_ngw",
            "aws_route_table.team2_route_private",
            "aws_subnet.team2_private_c",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d77cee8cdb4755",
            "route_table_id": "rtb-0a0045eb76b64e68a",
            "subnet_id": "subnet-0b7dae80e01d16c7a"
          },
          "dependencies": [
            "aws_internet_gateway.team2_igw",
            "aws_route_table.team2_route_public",
            "aws_subnet.team2_public_a",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team2_route_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082c2c4613f64388f",
            "route_table_id": "rtb-0a0045eb76b64e68a",
            "subnet_id": "subnet-09f76c3bb6c5832d6"
          },
          "dependencies": [
            "aws_internet_gateway.team2_igw",
            "aws_route_table.team2_route_public",
            "aws_subnet.team2_public_c",
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "team2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:security-group/sg-03f959d84ca5b02e8",
            "description": "Http_ICMP_SQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f959d84ca5b02e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "team2-sg",
            "name_prefix": "",
            "owner_id": "133713477530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "team2-sg"
            },
            "tags_all": {
              "Name": "team2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_dba_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-05e9fc9474fe781a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e9fc9474fe781a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-dba-a"
            },
            "tags_all": {
              "Name": "team2-dba-a"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_dba_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-060ee2a5115a3c646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060ee2a5115a3c646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-dba-c"
            },
            "tags_all": {
              "Name": "team2-dba-c"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-04eccaa3fe26a71d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04eccaa3fe26a71d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-private1"
            },
            "tags_all": {
              "Name": "team2-private1"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-015699598cf3ba204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015699598cf3ba204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-private2"
            },
            "tags_all": {
              "Name": "team2-private2"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-0b7dae80e01d16c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7dae80e01d16c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-public1"
            },
            "tags_all": {
              "Name": "team2-public1"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team2_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:subnet/subnet-09f76c3bb6c5832d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f76c3bb6c5832d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133713477530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team2-public2"
            },
            "tags_all": {
              "Name": "team2-public2"
            },
            "vpc_id": "vpc-09670eed0d003fa20"
          },
          "dependencies": [
            "aws_vpc.team2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:133713477530:vpc/vpc-09670eed0d003fa20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f40abed9eefbcc0b",
            "default_route_table_id": "rtb-0966d4fb43623b930",
            "default_security_group_id": "sg-0e53621a01ba29f6b",
            "dhcp_options_id": "dopt-06434c47b25622244",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09670eed0d003fa20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0966d4fb43623b930",
            "owner_id": "133713477530",
            "tags": {
              "Name": "team2-vpc"
            },
            "tags_all": {
              "Name": "team2-vpc"
            }
          }
        }
      ]
    }
  ]
}